--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "dependencies": {
     "@hono/node-server": "^1.19.9",
     "better-sqlite3": "^11.6.0",
+    "dotenv": "^17.2.3",
     "hono": "^4.6.9",
+    "resend": "^6.9.1",
     "uuid": "^9.0.0",
     "zod": "^3.24.1"
   }
