checkpoint: AI email generation working - before research enhancement
Working features:
- Campaign CRUD with AI prompt support
- Contact import from CSV
- Background email generation (OpenAI)
- Preview/Edit modal with regeneration
- Email processor with follow-ups

Next: Adding Perplexity research step

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,13 @@ DATABASE_PATH=./data/cadence.db
 # Processor
 PROCESSOR_BATCH_SIZE=10
 PROCESSOR_INTERVAL_MS=30000
+
+# AI Configuration
+# Set to 'true' to use real OpenAI API, 'false' or omit for mock AI
+USE_REAL_AI=false
+
+# Get your API key from https://platform.openai.com/api-keys
+OPENAI_API_KEY=sk-xxxxxxxxxx
+
+# Model to use (gpt-4o-mini is fast and cheap, gpt-4o for higher quality)
+AI_MODEL=gpt-4o-mini
