--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "better-sqlite3": "^11.6.0",
     "dotenv": "^17.2.3",
     "hono": "^4.6.9",
+    "openai": "^6.17.0",
     "resend": "^6.9.1",
     "uuid": "^9.0.0",
     "zod": "^3.24.1"
