feat: add research and AI generation with lead selection

--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,7 @@ OPENAI_API_KEY=sk-xxxxxxxxxx
 
 # Model to use (gpt-4o-mini is fast and cheap, gpt-4o for higher quality)
 AI_MODEL=gpt-4o-mini
+
+# Perplexity Configuration (for lead research)
+# Get your API key from https://www.perplexity.ai/settings/api
+PERPLEXITY_API_KEY=pplx-xxxxxxxxxx
